PlayerController.cs created, horizontalInput added

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,5 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+Unit 2/Prototype 2/Library/CrashedAssetImports.txt
+Unit 2/Prototype 2/Library/CrashedAssetImports.txt
